--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,5 @@ edition = "2021"
 
 [dependencies]
 libm = "0.2.8"
-macroquad = "0.4.5"
-quad-gl = "0.2.13"
+piston_window = "0.131.0"
 rand = "0.8.5"
-rayon = "1.10.0"
